--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    command: >
-      bash -c "
-        python /django_application/manage.py makemigrations &&
-        python /django_application/manage.py migrate &&
-        python /django_application/manage.py runserver 0.0.0.0:8000
-      "
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/django_application
       - ./application/engine/moto_manual_agent/vector_indices:/django_application/application/engine/moto_manual_agent/vector_indices
@@ -17,7 +12,7 @@ services:
       - "8000:8000"
     working_dir: /django_application
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_API_KEY=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
       - DJANGO_SETTINGS_MODULE=application.settings
       - PYTHONPATH=/django_application
       - TEST_MODE=true
