--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,17 @@ django>=4.0.0
 djangorestframework>=3.14.0
 gunicorn>=21.2.0
 python-dotenv>=1.0.0
-rakam-systems>=0.2.4
-openai>=1.0.0
 pandas>=2.0.0
 pymupdf>=1.23.0
 python-dotenv>=1.0.0
 pycryptodome>=3.19.1
 langdetect>=1.0.9
+djangorestframework-simplejwt
+langchain==0.0.267
+numpy==1.24.3
+pypdf==3.15.4
+ChromaDB==0.4.6
+openai==0.27.8
+tiktoken==0.4.0
+Django==4.2.3
+django-cors-headers==4.2.0
