--- a/front-temp/package.json
+++ b/front-temp/package.json
@@ -16,6 +16,7 @@
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/router": "^17.3.12",
     "marked": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
