--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "8000:8000"
     working_dir: /django_application
     environment:
-      - OPENAI_API_KEY=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
+      - OPENAI_API_KEY=
       - DJANGO_SETTINGS_MODULE=application.settings
       - PYTHONPATH=/django_application
       - TEST_MODE=true
